Replace `PropertiesUtil` with `PropertyEnvironment`
This replaces `PropertiesUtil` with `PropertyEnvironment` in modules
that depend on Log4j Core.

It also ensures that every logger context has a different version of
`PropertyEnvironment`.